# torch_catkin

./: README.md
.github/workflows/: industrial_ci_action.yml
torch_catkin/: CMakeLists.txt  package.xml
torch_catkin/cmake/: torch_catkin.cmake.in
torch_catkin_test/: CMakeLists.txt  package.xml
